added serializers and models

--- a/test/fixtures/ads.yml
+++ b/test/fixtures/ads.yml
@@ -2,10 +2,10 @@
 
 one:
   title: MyString
-  body: MyText
-  image: MyString
+  body: MyString
+  user: one
 
 two:
   title: MyString
-  body: MyText
-  image: MyString
+  body: MyString
+  user: two
