--- a/test/fixtures/comments.yml
+++ b/test/fixtures/comments.yml
@@ -1,11 +1,11 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  commenter: MyString
-  body: MyText
+  text: MyString
   ad: one
+  user: one
 
 two:
-  commenter: MyString
-  body: MyText
+  text: MyString
   ad: two
+  user: two
